[project]
name = "homeassistant-vban"
dynamic = ["version"]
description = "VBAN VoiceMeeter integration for Home Assistant"
readme = "README.md"
authors = [
    { name = "Bill Best", email = "wmbest2@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiovban==1.0.3",
    "homeassistant",
]

[tool.hatch.version]
path = "custom_components/vban/manifest.json"
pattern = "\"version\": \"(?P<version>[^\"]+)\""

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest-homeassistant-custom-component",
    "pytest-asyncio",
    "pytest-cov",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
